[package]
name = "stuff"
version = "0.1.0"
authors = ["Paweł Bielecki <bieleckipawel10@gmail.com>"]
license = "MIT"
description = "A simple terminal app for managing todos."
homepage = "https://github.com/FreePlacki/stuff"
repository = "https://github.com/FreePlacki/stuff"
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
chrono = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
